--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.3",
     "react": "^18.2.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3",
     "sort-by": "^1.2.0"
