--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3",
+    "react-toastify": "^10.0.4",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
